fix z-index

--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -15,7 +15,7 @@ $third-font: 'Abril Fatface', cursive;
   background: $base-green; 
   font-family: $main-font;
   font-weight: normal;
-  padding: 0.5rem 3.5rem;
+  padding: 0rem 3.5rem;
 }
 
 
